# veyoff

./: .gitignore  CMakeLists.txt  PROMPT.md  README.md
.github/workflows/: build.yml  release.yml
config/: blacklist.txt
docs/: PROGRESS.md  how-it-works.html  windows-architecture.md  windows-build.md  windows-reverse-engineering.md
src/veyoff/: __init__.py  capture.py  daemon.py  filter.py  hotkey.py  main.py  overlay.py
src/windows/: veyoff-version.rc.in  veyoff-windows.cpp
toolchains/: windows-mingw64.cmake
